<resources>
    <string name="app_name">TechTaste</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pword">Enter your password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_title">Enter a title</string>
    <string name="selectService">Select a service</string>
    <string name="describe">Describe what you want</string>
    <string name="describe_what_you_want_in_detail">Describe what you want in detail</string>
    <string name="title_50_characters_or_less_only">Title - 50 characters or less only</string>
    <string name="title">Title</string>
    <string name="service_type">Service Type</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="title2">TITLE :</string>
    <string name="issue2">Issue :</string>
    <string name="update_password">Update Password</string>
    <string name="update">Update</string>
    <string name="request">Request</string>
    <string name="my_orders">My Orders</string>
    <string name="post_order">Post Order</string>
    <string name="verify">Verify</string>
    <string name="username">Username</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset">Reset</string>
</resources>
